--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~53.0.9",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
+    "lucide-react": "^0.508.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
