--- a/package.json
+++ b/package.json
@@ -10,20 +10,25 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/geolocation": "^3.4.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
     "expo": "~53.0.9",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.508.0",
+    "pigeon-maps": "^0.22.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-leaflet-maps": "^0.2.1",
+    "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "^0.20.0",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-picker/picker": "2.11.0"
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
