--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
+    "@supabase/supabase-js": "^2.49.4",
     "expo": "~53.0.9",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
@@ -21,9 +24,7 @@
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-web": "^0.20.0",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-picker/picker": "2.11.0"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
