Fixed merge conflicts and updated nav styling

--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
-<<<<<<< HEAD
-=======
     "@react-native-community/geolocation": "^3.4.0",
->>>>>>> 7d541c8eb51a97339e974256afac55a261bba861
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.12",
@@ -27,16 +24,13 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-feather": "^1.1.2",
     "react-native-leaflet-maps": "^0.2.1",
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-<<<<<<< HEAD
-    "react-native-web": "^0.20.0"
-=======
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.13.5"
->>>>>>> 7d541c8eb51a97339e974256afac55a261bba861
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
