--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.508.0",
+    "lucide-react-native": "^0.510.0",
     "papaparse": "^5.5.2",
     "pigeon-maps": "^0.22.1",
     "react": "19.0.0",
