--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -39,14 +39,13 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Build web version
-        run: npx expo export:web
+        run: npx expo export --platform web
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./web-build
-
