--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,7 @@ jobs:
         run: npm install --legacy-peer-deps
 
       - name: Build web version
-        run: npx expo export:web
+        run: npx expo export --platform web
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
