--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://priankav.github.io/Design-Challenge",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
