--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
+    "@expo/webpack-config": "^19.0.1",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "^7.1.8",
