--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "~53.0.9",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "^14.1.4",
+    "expo-router": "~5.0.7",
     "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.508.0",
     "lucide-react-native": "^0.510.0",
@@ -31,7 +32,7 @@
     "pigeon-maps": "^0.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.79.2",
+    "react-native": "^0.79.2",
     "react-native-feather": "^1.1.2",
     "react-native-leaflet-maps": "^0.2.1",
     "react-native-maps": "1.20.1",
